--- a/gender.Rmd
+++ b/gender.Rmd
@@ -12,6 +12,8 @@ library(jsonlite)
 library(rvest)
 library(installr)
 library(data.table) #for downloading CRAN/RStudio logs
+library(httr)
+library(gh)
 
 source(file="download_RStudio_CRAN_data.R") 
 ```
@@ -73,42 +75,129 @@ library(dplyr)
 library(jsonlite)
 
 #this would actually be a list of multiple repos
-repo_name <- "pip"
-language <- python
+repo_name <- "rlang"
+language <- "r"
 
-get_contrib_names <- function(repo,language="r"){
-# we don't know the github username associated with the package to construct a search
-# to get the most likely candidate
-search_url <- paste0("https://api.github.com/search/repositories?q=",
-                     repo_name,
-                     ".%20is:name+language:",
-                     language,
-                     "&sort=stars&order=desc")
-
-
-# first api call.  would need to would need to loop/map/apply over multiple contributors repo names
-all_repos<-jsonlite::read_json(search_url,simplifyVector = TRUE)
-
-regex_str <- paste0(".+/",repo_name,"$")
-target_repo<-all_repos$items %>% 
-  filter(str_detect(full_name,regex_str)) %>% 
-  pull(full_name)
-# no error checking if repo is not found
-
-search_url <- paste0("https://api.github.com/repos/",
-                     target_repo,
-                     "/contributors")
-#second api call
-contributors <- jsonlite::read_json(search_url,simplifyVector = TRUE)
-
-#third api call. would need to loop/map/apply over multiple contributors
-get_name <- function(contrib_url){
-  return(jsonlite::read_json(contrib_url)$name)
+my_gh <- function(end_point) {
+    return(jsonlite::fromJSON(jsonlite::toJSON(gh::gh(end_point)),simplifyVector = T))
 }
 
-return(get_name(contributors$url[1]))
+# --------------------------------------------------------------------------------
+get_contrib_info <- function(repo_name,language="r"){
+  base_url <- "https://api.github.com"
+  print(repo_name)
+  # we don't know the github username associated with the package to construct a search
+  # to get the most likely candidate
+  search_url <- paste0("/search/repositories?q=",
+                       repo_name,
+                       ".%20is:name+language:",
+                       language,
+                       "&sort=stars&order=desc")
+  
+  
+  # first api call.  would need to would need to loop/map/apply over 
+  # multiple contributors repo names
+  all_repos<-jsonlite::read_json(search_url,simplifyVector = TRUE)
+  
+  # get full path for exact match on repo name
+  regex_str <- paste0(".+/",repo_name,"$")
+  target_repo<-all_repos$items %>% 
+    filter(str_detect(full_name,regex_str)) %>% 
+    pull(full_name) %>% head(1)
+  # no error checking if repo is not found
+  print(target_repo)
+  
+  # there might be more than one user with repo of the same name
+  # Since they will be in order of download count, take just the first one
+  search_url <- paste0("https://api.github.com/repos/",
+                       target_repo[1],
+                       "/contributors")
+  #second api call
+  contributors <- jsonlite::read_json(search_url,simplifyVector = TRUE) %>% 
+    select(login,url,avatar_url)
+  
+  #third api call. would need to loop/map/apply over multiple contributors
+  get_name <- function(contrib_url){
+    return(jsonlite::read_json(contrib_url)$name)
+  }
+  
+  contrib_names<-map(contributors$url,get_name) %>% unlist()
+  
+  print(paste(length(contrib_names," contributors")))
+  
+  contrib_info <- tibble(language=language,
+                         package=repo_name,
+                         path=target_repo,
+                         contributor=contrib_names) %>% 
+    bind_cols(contributors) %>% 
+    select(-url)
+  
+  
+  return(contrib_info)
 }
 
-get_contrib_names(repo,language)
+# --------------------------------------------------------------------
+get_contrib_info_gh <- function(repo_name,language="r"){
+  print(repo_name)
+  # we don't know the github username associated with the package to construct a search
+  # to get the most likely candidate
+  search_url <- paste0("/search/repositories?q=",
+                       repo_name,
+                       ".%20is:name+language:",
+                       language,
+                       "&sort=stars&order=desc")
+  
+  
+  # first api call.  would need to would need to loop/map/apply over 
+  # multiple contributors repo names
+  all_repos <- my_gh(search_url) %>% .$items %>% .$full_name %>% unlist()
+  
+  # get full path for exact match on repo name
+  regex_str <- paste0(".+/",repo_name,"$")
+  target_repo <- all_repos[str_detect(all_repos,regex_str)][1]
+  # no error checking if repo is not found
+  print(target_repo)
+  
+  # there might be more than one user with repo of the same name
+  # Since they will be in order of download count, take just the first one
+  search_url <- paste0("/repos/",
+                       target_repo,
+                       "/contributors")
+  #second api call
+  contributors <- my_gh(search_url)
+  %>% bind_rows() %>%   
+    select(login,url,avatar_url)
+
+    #third api call. would need to loop/map/apply over multiple contributors
+  # need to strip base url
+  get_name <- function(contrib_url){
+    return(my_gh(contrib_url)$name)
+  }
+  
+  contrib_names<-map(contributors$url,get_name) %>% unlist()
+  
+  print(paste(length(contrib_names," contributors")))
+  
+  contrib_info <- tibble(language=language,
+                         package=repo_name,
+                         path=target_repo,
+                         contributor=contrib_names) %>% 
+    bind_cols(contributors) %>% 
+    select(-url)
+  
+  
+  return(contrib_info)
+}
+```
+
+
+```{r}
+load("data/r_pkg_list.rdata")
+load("data/python_pkg_list.rdata")
+
+dummy<- function(repo_name,language){
+  return(tibble(package=repo_name,language=language,stuff=1:3))
+}
+dat <- map(r_pkg_list$package,get_contrib_info,language="r") %>% bind_rows()
 ```
 
