--- a/gender.Rmd
+++ b/gender.Rmd
@@ -113,6 +113,13 @@ get_contributor_ids <- function(target_repo){
   return(contributors)
 }
 
+# ---------------------------------------------------------------------------
+  get_name <- function(contrib_url){
+    user_data <- my_gh(contrib_url)
+    # just return login name if real name is missing
+    if (is_empty(user_data$name)) return(user_data$login) else return(user_data$name)
+  }
+
 # --------------------------------------------------------------------
 get_contrib_info <- function(repo_name="dplyr",language="r"){
   print(repo_name)
@@ -121,7 +128,7 @@ get_contrib_info <- function(repo_name="dplyr",language="r"){
   search_url <- paste0("/search/repositories?q=",
                        repo_name
                       , "+language:", language
-#                     ,  "+is:name"
+                      ,  "+is:name"
 #                     ,"&sort=stars",
 #                     ,   "&order=desc"
   )
@@ -129,39 +136,33 @@ get_contrib_info <- function(repo_name="dplyr",language="r"){
   
   # first api call.  would need to would need to loop/map/apply over 
   # multiple contributors repo names
-  all_repos <- my_gh(search_url) %>% .$items %>% .$full_name %>% unlist()
+  all_repos <- my_gh(search_url) %>% 
+    .$items %>% 
+    select(name,full_name)
   
   # get full path for exact match on repo name
-  regex_str <- paste0(".+/",repo_name,"$")
-  target_repo <- all_repos[str_detect(all_repos,regex_str)][1]
-  # no error checking if repo is not found
-  print(target_repo)
-  
   # there might be more than one user with repo of the same name
   # Since they will be in order of github "score", take just the first one
+  target_repo <- all_repos %>% 
+    filter(name == repo_name) %>%
+    pull(full_name) %>% 
+   .[1] %>% 
+    unlist()
   #second api call
-  contributor_ids <- get_contributor_ids(target_repo)
-    
-  #third api call. would need to loop/map/apply over multiple contributors
-  # need to strip base url
-  get_name <- function(contrib_url){
-    user_data <- my_gh(contrib_url)
-    # just return login name if real name is missing
-    if (is_empty(user_data$name)) return(user_data$login) else return(user_data$name)
+  # get user urls for all contributors
+  if (!is.null(target_repo)){
+    contributor_ids <- get_contributor_ids(target_repo)
+    contrib_names<-map(contributor_ids$url,get_name) %>% unlist()
+    print(paste(length(contrib_names)," contributors"))
+    contrib_info <- tibble(language=language,
+                           package=repo_name,
+                           path=target_repo,
+                           contributor=contrib_names) %>% 
+      bind_cols(contributor_ids) %>% 
+      select(-url) %>% unnest()
+  } else {
+    contrib_info <- NULL
   }
-  
-  contrib_names<-map(contributor_ids$url,get_name) %>% unlist()
-  
-  print(paste(length(contrib_names)," contributors"))
-  
-  contrib_info <- tibble(language=language,
-                         package=repo_name,
-                         path=target_repo,
-                         contributor=contrib_names) %>% 
-    bind_cols(contributor_ids) %>% 
-    select(-url) %>% unnest()
-  
-  
   return(contrib_info)
 }
 ```
@@ -171,6 +172,8 @@ get_contrib_info <- function(repo_name="dplyr",language="r"){
 load("data/r_pkg_list.rdata")
 # Rcpp package is not categorized as R langauge so I got it manually.
 r_pkg_list <- r_pkg_list %>% filter(package != "Rcpp")
+# change periods in package name so regex is not confused
+r_pkg_list <- str_replace(r_pkg_list$package,"\\.","\\.")
 load("data/python_pkg_list.rdata")
 
 dat <- map(r_pkg_list$package,get_contrib_info,language="r") %>% bind_rows()
